--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body, html {
   width: 100%;
   height: 100%;
-  font-family: Apple Chancery, cursive;
+  font-family:"Apple Chancery, cursive";
   margin: 0 auto;
   display: block;
   text-align: center;
@@ -47,5 +47,37 @@ img:hover {
 }
 
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
+ div.column { 
+  display:inline-block;
+  width:100%;
+}
 
 /* create your tile classes! we recommend .small .med .large */
+.small {
+  display:block;
+  float:left;
+  width: 33.3%;
+  padding: 2px;
+  box-sizing: border-box;
+}
+
+.med {
+  display:block;
+  float:right;
+  width:66.6%;
+  padding: 2px;
+  box-sizing: border-box;
+}
+
+.large {
+  display:block;
+  width: 100%;
+}
+
+body div.indifferent .med {
+  float: left;
+}
+
+body div.indifferent .small {
+  float: right;
+}
